crates/swc_ecma_parser/tests/test262-error-references/fail/e808e347646c2670.js.stderr
error: Declaration is now allowed
 --> $DIR/tests/test262-parser/fail/e808e347646c2670.js:1:13
  |
1 | for(a of b) function c(){}
  |             ^^^^^^^^

